deploy nfs-storage class prometheus grafana

--- a/prometheus/grafana-ingress.yml
+++ b/prometheus/grafana-ingress.yml
@@ -19,7 +19,7 @@ spec:
   - host: oatas.veritas.com
     http:
       paths:
-        - path: /
+        - path: /grafana
           pathType: Prefix
           backend:
             service:
