--- a/prometheus/grafana-pvc.yaml
+++ b/prometheus/grafana-pvc.yaml
@@ -1,13 +1,13 @@
-kind: PersistentVolumeClaim
 apiVersion: v1
+kind: PersistentVolumeClaim
 metadata:
-  name: test-claim
-  namespace: monitoring
   annotations:
     volume.beta.kubernetes.io/storage-class: "nfs-client"
+  name: grafana
+  namespace: monitoring
 spec:
   accessModes:
     - ReadWriteMany
   resources:
     requests:
-      storage: 1Mi
+      storage: 50Gi
