--- a/prometheus/manifests/grafana-deployment.yaml
+++ b/prometheus/manifests/grafana-deployment.yaml
@@ -148,8 +148,9 @@ spec:
         runAsUser: 65534
       serviceAccountName: grafana
       volumes:
-      - emptyDir: {}
-        name: grafana-storage
+      - name: grafana-storage
+        persistentVolumeClaim:
+          claimName: grafana        
       - name: grafana-datasources
         secret:
           secretName: grafana-datasources
