--- a/prometheus/manifests/prometheus-prometheus.yaml
+++ b/prometheus/manifests/prometheus-prometheus.yaml
@@ -19,6 +19,14 @@ spec:
   enableFeatures: []
   externalLabels: {}
   image: quay.io/prometheus/prometheus:v2.36.1
+  storage:
+    volumeClaimTemplate:
+      spec:
+        storageClassName: nfs-client
+        accessModes: ["ReadWriteOnce"]
+        resources:
+          requests:
+            storage: 300Gi  
   nodeSelector:
     kubernetes.io/os: linux
   podMetadata:
