--- a/prometheus/manifests/prometheus-prometheus.yaml
+++ b/prometheus/manifests/prometheus-prometheus.yaml
@@ -54,3 +54,6 @@ spec:
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
   version: 2.36.1
+  additionalScrapeConfigs:
+    name: additional-scrape-configs
+    key: prometheus-additional.yaml  
